--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     /*font-family: 'Nunito Sans', sans-serif;*/
     /*font-family: 'Open Sans', sans-serif;*/
     /*font-family: 'Source Sans Pro', sans-serif;*/
+    --brand-color: #FF0000;
+    --dark-color: #28272C;
 }
 
 * {
@@ -12,9 +14,7 @@
 
 .container {
     margin: 0 auto;
-    width: 1088px;
-    display: flex;
-    align-items: center;
+    max-width: 1088px;
 }
 
 .page-header {
@@ -26,9 +26,24 @@
     position: relative;
 }
 
+/* nawigacja */
+
+.nav-bar {
+    height: 90px;
+    width: 100%;
+    /* border: 2px solid #00000066; */
+    background-color: #00000066;
+    position: absolute;
+}
+
+.nav-bar .container {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 a.page-logo {
-    /*height: 35px;*/
-    /*width: 31px;*/
     text-decoration: none;
     align-items: center;
 }
@@ -38,26 +53,20 @@ a.page-logo {
     font-weight: 800;
     text-transform: uppercase;
     color: #ffffff;
-}
-
-.car {
-    color: #FF0000;
-}
-
-.page-header .container {
-    height: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.nav-bar {
-    border: 2px solid #00000066;
-    background-color: #00000066;
+.car {
+    color: var(--brand-color);
+    padding: 5px;
 }
+
 .page-nav {
     display: flex;
     align-items: center;
+    height: 100%;
 }
 
 .page-nav-list {
@@ -66,32 +75,40 @@ a.page-logo {
     color: #FFFFFF;
 }
 
-.page-nav-list li {
-}
-
 .page-nav-list a {
     text-transform: uppercase;
     text-decoration: none;
     color: white;
     font-weight: 600;
-    padding: 36px;
+    padding: 37px;
 }
 
 .page-nav-list a:hover {
     background: #FFFFFF33;
 }
 
-section.container {
+/* koniec panelu nawigacji */
+.banner {
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.banner .container {
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     color: white;
+    /*z-index: 3;*/
 }
 
 .banner-title {
     font-size: 90px;
+    font-weight: 900;
+    text-shadow: 0px 3px 6px #00000040;
     text-transform: uppercase;
+    padding-bottom: 50px;
 }
 
 .banner-text {
@@ -99,9 +116,9 @@ section.container {
     text-align: center;
     margin-bottom: 50px;
 }
+
 .banner-buttons {
     display: flex;
-    /*justify-items: center;*/
     text-transform: uppercase;
     font-size: 16px;
     height: 66px;
@@ -109,13 +126,14 @@ section.container {
     font-weight: 600;
     gap: 20px;
 }
+
 .btn-1 {
     top: 485px;
     left: 451px;
     width: 220px;
     height: 66px;
     padding: 22px 55px;
-    background: #FF0000;
+    background: var(--brand-color);
     box-shadow: 0px 3px 6px #FF00004D;
     border-radius: 40px;
     opacity: 1;
@@ -132,13 +150,14 @@ section.container {
     background: #FFFFFF;
     border-radius: 40px;
     opacity: 1;
-    color: #FF0000;
+    color: var(--brand-color);
     text-decoration: none;
 }
+
 .arrow-down {
     height: 55px;
     width: 55px;
-    background-color: #FF0000;
+    background-color: var(--brand-color);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -146,4 +165,254 @@ section.container {
     position: absolute;
     bottom: -27px;
     left: calc(50% - 27px);
-    }
+}
+
+/* koniec pierwszej sekcji */
+
+/* blog - początek */
+
+#blog, #section {
+    /*height: 100vh;*/
+    position: relative;
+}
+
+.section-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.section-title::before,
+.section-title::after {
+    content: " ";
+    display: block;
+    width: 50px;
+    height: 3px;
+    background: var(--brand-color);
+}
+
+.section-title span {
+    font-size: 35px;
+    text-transform: uppercase;
+    padding: 10px;
+    font-weight: bold;
+    color: black;
+    display: inline-block;
+}
+
+#blog .container {
+    padding-bottom: 100px;
+}
+
+.articles {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.blog-article {
+    width: 352px;
+    flex-wrap: wrap;
+    /*margin-bottom: 30px;*/
+}
+
+
+.article-title {
+    font-size: 19px;
+    color: #6A6A6A;
+    line-height: 26px;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+
+.article-content {
+    font: normal normal 300 14px/19px Open Sans;
+    letter-spacing: 0;
+    color: #6A6A6A;
+    opacity: 1;
+    margin-top: 30px;
+    width: 80%;
+}
+
+.article-btn {
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+    padding: 10px 20px;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    background: var(--brand-color) 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #FF00004D;
+    border-radius: 40px;
+    margin-top: 30px;
+    width: 142px;
+}
+
+/*tu kończy sie blog i zaczyna się service*/
+
+#service {
+    background-color: var(--dark-color);
+}
+
+#service .container {
+    padding-bottom: 100px;
+}
+
+.service-article {
+    width: 270px;
+    flex-wrap: wrap;
+    /*margin-bottom: 30px;*/
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+#service * {
+    color: white;
+}
+
+#service .article-content {
+    color: #B2B2B2;
+}
+
+/*contact*/
+#contact .container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
+#contact .container img {
+    width: 444px;
+    height: 317px;
+    margin: 0 8px 20px 8px;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    width: 444px;
+    margin: 0 8px 20px 8px;
+    padding-bottom: 100px;
+}
+
+.contact-form input, .contact-form textarea, .checkbox {
+    margin-bottom: 20px;
+}
+
+input[type="text"], input[type="email"] {
+    border: 1px solid #D1D1D1;
+    border-radius: 8px;
+    height: 38px;
+    padding: 8px;
+}
+
+textarea {
+    border: 1px solid #D1D1D1;
+    border-radius: 8px;
+    height: 140px;
+}
+
+.form::placeholder {
+    color: #B2B2B2;
+    font-size: 16px;
+}
+
+.form:focus {
+    box-shadow: 0px 1px 6px #FF00004D;
+    border: 1px solid #FF0000;
+}
+
+.checkbox {
+    display: flex;
+    cursor: pointer;
+}
+
+.checkbox span {
+    font: normal normal 300 10px/14px Open Sans;
+    color: #B2B2B2;
+    padding-left: 10px;
+}
+
+.checkbox input {
+    /*width: 22px;*/
+    /*height: 22px;*/
+    border: 1px solid #D1D1D1;
+    border-radius: 1px;
+}
+
+input[type:
+
+"checkbox"
+]
+:checked {
+    background: transparent url(../images/Icon Check.svg) 0 % 0 % no-repeat padding-box;
+}
+
+.send-btn {
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--brand-color);
+    padding: 10px 20px;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #FF00004D;
+    border: 1px solid #FF0000;
+    border-radius: 40px;
+    width: 142px;
+    align-self: flex-end;
+    cursor: pointer;
+}
+
+/*footer*/
+
+footer {
+    background-color: var(--dark-color);
+}
+
+footer .logo {
+    height: 34px;
+    justify-content: flex-start;
+    padding-top: 40px;
+    margin-bottom: 22px;
+    font-size: 25px;
+}
+
+.footer-nav {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 40px;
+}
+
+.footer-nav-list {
+    display: flex;
+}
+
+.footer-nav-list ul {
+    margin-right: 140px;
+}
+
+.footer-nav-list a {
+    color: #FFFFFF;
+    text-decoration: none;
+    text-transform: uppercase;
+    font: normal normal bold 14px/19px Nunito Sans;
+}
+
+.footer-nav-list a:hover {
+    color: var(--brand-color);
+}
+
+.copyright {
+    align-self: flex-end;
+    font-size: 12px;
+    color: #D1D1D1;
+}
